2010-10-05  Oliver Hunt  <oliver@apple.com>

        Reviewed by Darin Adler.

        REGRESSION(r68338): JavaScript error on PowerPC only (crashes on Interpreter built for x86_64)
        https://bugs.webkit.org/show_bug.cgi?id=46690

        Use the correct register value when initialising the arguments
        object in the interpreter.  This is covered by existing tests.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

2010-10-04  David Goodwin  <david_goodwin@apple.com>

        Reviewed by Oliver Hunt.

        ARMv7 JIT should take advantage of 2-byte branches to reduce code size
        https://bugs.webkit.org/show_bug.cgi?id=47007

        * assembler/ARMv7Assembler.cpp:
        * assembler/ARMv7Assembler.h:
        (JSC::ARMv7Assembler::computeJumpType):
        (JSC::ARMv7Assembler::link):
        (JSC::ARMv7Assembler::canBeJumpT2):
        (JSC::ARMv7Assembler::canBeJumpT4):
        (JSC::ARMv7Assembler::linkBX):
        (JSC::ARMv7Assembler::linkJumpT4):
        (JSC::ARMv7Assembler::linkJumpT2):
        (JSC::ARMv7Assembler::linkJumpAbsolute):

2010-10-04  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Antonio Gomes.

        [EFL] Use fast malloc for WebKit EFL
        https://bugs.webkit.org/show_bug.cgi?id=46691

        Use fast malloc for WebKit EFL because the fast malloc is to allocate
        memory quickly.

        * wtf/CMakeListsEfl.txt:

2010-10-04  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Lazily create activation objects
        https://bugs.webkit.org/show_bug.cgi?id=47107

        Make it possible to lazily create the activation object
        for a function that needs one.  This allows us to reduce
        the overhead of entering a function that may require
        an activation in some cases, but not always.

        This does make exception handling a little more complex as
        it's now necessary to verify that a callframes activation