@@ -1,3 +1,15 @@
+2010-10-05  Kwang Yul Seo  <skyul@company100.net>
+
+        Reviewed by Kent Tamura.
+
+        [BREWMP] Use PlatformRefPtr in randomNumber
+        https://bugs.webkit.org/show_bug.cgi?id=46989
+
+        Use PlatformRefPtr to free memory automatically.
+
+        * wtf/RandomNumber.cpp:
+        (WTF::randomNumber):
+
 2010-10-05  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Darin Adler.
